fixed sliding text overflow

--- a/direction-2/style.css
+++ b/direction-2/style.css
@@ -264,21 +264,27 @@ section:has(blockquote) {
 
 /* ------------ slide ------------- */
 
+.sliding-wrapper {
+    width: 100%;
+    margin-block-start: 6rem;
+    margin-block-end: 1rem;
+}
+
 .sliding-container {
     width: calc(100% + 300px);
+    margin-inline: -150px;
     border-top: 1.5px solid white;
     border-bottom: 1.5px solid white;
     padding-block: 0.4rem;
-    margin-inline: -1rem;
-    margin-block-start: 6rem;
-    margin-block-end: 0;
     white-space: nowrap;
     position: relative;
     transform: rotate(12deg);
-    overflow: hidden; /* THIS is crucial */
+    overflow: visible;
 }
 
+
 .sliding-text {
+    
     display: inline-block;
     white-space: nowrap;
     animation: slide-rtl 18s linear infinite;
